--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .DS_Store
+data/.DS_Store
+Data/.DS_Store
+codes/.DS_Store
+functions/.DS_Store
+examples/.DS_Store
+submissions/.DS_Store
+.Rproj.user
+.Rhistory
