--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 .DS_Store
+.Rproj.user
+.Rhistory
+
 data/.DS_Store
-Data/.DS_Store
 codes/.DS_Store
 functions/.DS_Store
 examples/.DS_Store
 submissions/.DS_Store
-.Rproj.user
-.Rhistory
+pred_valid/.DS_Store
+pred_public/.DS_Store
+
+data/known.csv
+data/public.csv
+data/private.csv
