--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ data/demand_anonymized_20170802.csv
 data/DSG_DataDictionary_20170905.xlsx
 data/eval.csv
 data/sample_submission.csv
+data/eval_correct.csv
