--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ data/sample_submission.csv
 data/eval_correct.csv
 data/data_known_noNAs_first.rda
 data/known_structured_19_30.rda
+data/agg_data_all_features_dep_vars_22_00.rda
